Fixed display on mobiles(kind of)

--- a/oldham-bingo.css
+++ b/oldham-bingo.css
@@ -10,7 +10,7 @@ h1 {
 }
 #bingo-board-container, #signin-container {
   border: 5px solid #000;
-  margin: 20px 20px 0 20px;
+  margin: 10px 10px 0 10px;
   width: 70%;
   height: 80%;
   float: left;
